--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             </div>
         </div>
     </nav>
-  <!--  <div class="banner-section-bg-container d-flex justify-content-center flex-column" id="home"> <--
+    <div class="banner-section-bg-container d-flex justify-content-center flex-column" id="home">
         <div class="text-center">
-            <h1 class="banner-heading mb-3">The Revolution in Virtual Reality</h1>
+            <h1 class="banner-heading mb-3">Virtual Reality</h1>
             <a href="#explore"><button class="vr-button">Explore</button></a>
         </div>
     </div>
