--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          
     }
     function clicked(){
-            alert("added to cart");
+            alert("added");
          }
 
         function read(id1,id2)
